--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,15 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: leomuch77
 
 development:
   <<: *default
   database: customer-support_development
+  username: postgres
+  password: leomuch77
+  
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,7 +63,8 @@ development:
 test:
   <<: *default
   database: customer-support_test
-
+  username: postgres
+  password: leomuch77
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
