--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.6.5",
     "angular-ui-router": "^1.0.5",
     "AngularDevise": "angular-devise#^1.3.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-ui-notification": "^0.3.6"
   }
 }
